chore: add coverage to all tests

--- a/package.json
+++ b/package.json
@@ -31,34 +31,34 @@
     "test:ci": "jest test --watchAll=false --coverage=true",
     "mutants": "stryker run",
     "watch": "jest --watch",
-    "fizz": "jest -i src/1_FizzBuzz/test.ts",
-    "leap": "jest -i src/2_LeapYear/test.ts",
-    "fib": "jest -i src/3_Fibonacci/test.ts",
-    "stack": "jest -i src/4_StackKata/test.ts",
-    "roman": "jest -i src/5_RomanNumerals/test.ts",
-    "prime": "jest -i src/6_PrimeFactors/test.ts",
-    "tic": "jest -i src/7_TicTacToe/test.ts",
-    "yahtzee": "jest -i src/8_Yahtzee/test.ts",
-    "mars": "jest -i src/9_MarsRover/test.ts",
-    "tennis": "jest -i src/10_Tennis/test.ts",
-    "rose": "jest -i src/11_GildedRose/test.ts",
-    "golf": "jest -i src/12_RefactoringGolf/*",
-    "golf1": "jest -i src/12_RefactoringGolf/hole1/ --watchAll=true",
-    "golf2": "jest -i src/12_RefactoringGolf/hole2/ --watchAll=true",
-    "golf3": "jest -i src/12_RefactoringGolf/hole3/ --watchAll=true",
-    "golf4": "jest -i src/12_RefactoringGolf/hole4/ --watchAll=true",
-    "golf5": "jest -i src/12_RefactoringGolf/hole5/ --watchAll=true",
-    "golf6": "jest -i src/12_RefactoringGolf/hole6/ --watchAll=true",
-    "golf7": "jest -i src/12_RefactoringGolf/hole7/ --watchAll=true",
-    "golf8": "jest -i src/12_RefactoringGolf/hole8/ --watchAll=true",
-    "golf9": "jest -i src/12_RefactoringGolf/hole9/ --watchAll=true",
-    "golf10": "jest -i src/12_RefactoringGolf/hole10/ --watchAll=true",
-    "golf11": "jest -i src/12_RefactoringGolf/hole11/ --watchAll=true",
-    "golf12": "jest -i src/12_RefactoringGolf/hole12/ --watchAll=true",
-    "smelly": "jest -i src/13_SmellyTicTacToe/test.ts",
-    "copier": "jest -i src/14_CharacterCopier/test.ts",
-    "tac": "jest -i src/15_TicTacToe/test.ts",
-    "esa": "jest -i src/16_ESAMarsRover/test.ts"
+    "fizz": "jest -i src/1_FizzBuzz/test.ts --coverage=true",
+    "leap": "jest -i src/2_LeapYear/test.ts --coverage=true",
+    "fib": "jest -i src/3_Fibonacci/test.ts --coverage=true",
+    "stack": "jest -i src/4_StackKata/test.ts --coverage=true",
+    "roman": "jest -i src/5_RomanNumerals/test.ts --coverage=true",
+    "prime": "jest -i src/6_PrimeFactors/test.ts --coverage=true",
+    "tic": "jest -i src/7_TicTacToe/test.ts --coverage=true",
+    "yahtzee": "jest -i src/8_Yahtzee/test.ts --coverage=true",
+    "mars": "jest -i src/9_MarsRover/test.ts --coverage=true",
+    "tennis": "jest -i src/10_Tennis/test.ts --coverage=true",
+    "rose": "jest -i src/11_GildedRose/test.ts --coverage=true",
+    "golf": "jest -i src/12_RefactoringGolf/* --coverage=true",
+    "golf1": "jest -i src/12_RefactoringGolf/hole1/ --watchAll=true --coverage=true",
+    "golf2": "jest -i src/12_RefactoringGolf/hole2/ --watchAll=true --coverage=true",
+    "golf3": "jest -i src/12_RefactoringGolf/hole3/ --watchAll=true --coverage=true",
+    "golf4": "jest -i src/12_RefactoringGolf/hole4/ --watchAll=true --coverage=true",
+    "golf5": "jest -i src/12_RefactoringGolf/hole5/ --watchAll=true --coverage=true",
+    "golf6": "jest -i src/12_RefactoringGolf/hole6/ --watchAll=true --coverage=true",
+    "golf7": "jest -i src/12_RefactoringGolf/hole7/ --watchAll=true --coverage=true",
+    "golf8": "jest -i src/12_RefactoringGolf/hole8/ --watchAll=true --coverage=true",
+    "golf9": "jest -i src/12_RefactoringGolf/hole9/ --watchAll=true --coverage=true",
+    "golf10": "jest -i src/12_RefactoringGolf/hole10/ --watchAll=true --coverage=true",
+    "golf11": "jest -i src/12_RefactoringGolf/hole11/ --watchAll=true --coverage=true",
+    "golf12": "jest -i src/12_RefactoringGolf/hole12/ --watchAll=true --coverage=true",
+    "smelly": "jest -i src/13_SmellyTicTacToe/test.ts --coverage=true",
+    "copier": "jest -i src/14_CharacterCopier/test.ts --coverage=true",
+    "tac": "jest -i src/15_TicTacToe/test.ts --coverage=true",
+    "esa": "jest -i src/16_ESAMarsRover/test.ts --coverage=true"
   },
   "dependencies": {},
   "devDependencies": {
